--- a/whoweare.html
+++ b/whoweare.html
@@ -67,7 +67,7 @@
 						<p class="lead">
 							Cloud & AI Architect
 						</p>
-						<ol title="1" class="sublead">
+						<ol title="1" class="lead">
 							<li>Act as data and AI advisor to collaborate with cross-functional stakeholders to strategize innovative AI and cloud deployment solutions at scale.</li>
 							<li>Directed Azure cloud architecture design and creation for various cloud solutions.</li>
 							<li>Serve as cloud administrator to create, manage, and monitor R&D organization’s Azure cloud subscription.</li>
@@ -77,7 +77,7 @@
 						<p class="lead">
 							Data Science
 						</p>
-						<ol title="1" class="sublead">
+						<ol title="1" class="lead">
 							<li>Created machine learning models to predict and improve patient pain outcomes after neuroablation and radiation therapies.</li>
 							<li>Used data analytics to identify and problem solve clinical data issues from medical device complaints.</li>
 						</ol>
@@ -86,7 +86,7 @@
 						<p class="lead">
 							Deep Learning
 						</p>
-						<ol title="1" class="sublead">
+						<ol title="1" class="lead">
 							<li>Created and deployed an embedded ensemble deep learning computer vision model to segment nerves in ultrasound images to aid clinicians in US-guided regional anesthesia.</li>
 							<li>Created deep learning computer vision models (CNN) to predict 3D dose distribution to speed up radiation therapy planning by 67% on average.</li>
 							<li>Created and deployed on-premise deep learning computer vision models (3D U-Net) to segment brain tumors in MR images and liver organs in CT images for radiomics.</li>
@@ -97,7 +97,7 @@
 						<p class="lead">
 							Data Engineering
 						</p>
-						<ol title="1" class="sublead">
+						<ol title="1" class="lead">
 							<li>Devised and led agile teams to build IoT solution and digital cloud platform to connect a neuroablation medical device for remote real-time monitoring of device performance and data collection.</li>
 							<li>Devised and led a clinical study to assess performance of IoT gateway solution at multiple pilot sites. Over 100 patients with 100% data accuracy, 86% data completeness.</li>
 							<li>Designed data models, developed ETL processes, and built data warehouses and web dashboards for insights in decision making support.</li>
@@ -128,7 +128,7 @@
 						<p class="lead">
 							<a href="https://github.com/kaysunphd/coursera" target="_blank">Coursera Professional Certificates</a>
 						</p>
-						<ol title="1" class="subsublead">
+						<ol title="1" class="sublead">
 							<li>IBM Data Science</li>
 							<li>IBM Machine Learning</li>
 							<li>IBM Data Engineering</li>
@@ -144,7 +144,7 @@
 						<p class="lead">
 							<a href="https://github.com/kaysunphd/udacity" target="_blank">Udacity Nanodegrees</a>
 						</p>
-						<ol title="1" class="subsublead">
+						<ol title="1" class="sublead">
 							<li>Data Scientist</li>
 							<li>Data Engineering</li>
 							<li>Cloud Developer using Azure</li>
@@ -162,7 +162,7 @@
 						<p class="lead">
 							Peer-reviewed
 						</p>
-						<ol title="1" class="subsublead">
+						<ol title="1" class="sublead">
 							<li>
 								A. Babier, B. Zhang, R. Mahmood, V.G.L Alves, A. Barragan-Montero, J. Beaudry, C. Cardenas, Y. Chang, Z. Chen, J. Chun, H. Eraso, E. Faustmann, S. Gaj, S. Gay, M. Gronberg, J. He, G. Heilemann, S. Hira, Y. Huang, F. Ji, D. Jiang, J. Jimenez-Giraldo, H. Lee, J. Lian, K. Liu, S. Liu, K. Marixa, J. Marrugo, K. Miki, T. Netherton, D. Nguyen, H. Nourzadeh, A. Osman, Z. Peng, J. Quinto-Munoz, C. Ramsl, D. Rhee, J. Rodriguez-Arciniegas, H. Shan, J.V. Siebers, M. H. Soomro, <b><ins>K. Sun</ins></b>, A. Usuga-Hoyos, C. Valderrama, R. Verbeek, E. Wang, S. Willems, Q. Wu, X. Xu, S. Yang, L. Yuan, S. Zhu, L. Zimmermann, K.L. Moore, T.G. Purdie, A.L. McNiven, T.C.Y. Chan, “OpenKBP-Opt: An international and reproducible evaluation of 76 knowledge-based planning pipelines”, Physics in Medicine and Biology, 2022 67; 185012.
 							</li>
@@ -223,7 +223,7 @@
 						<p class="lead">
 							Book Chapters
 						</p>
-						<ol title="1" class="subsublead">
+						<ol title="1" class="sublead">
 							<li>
 								Wenk, J., Zhang, Z., Cheng, G., <b><ins>Sun, K.</ins></b>, Walker, J., Saloner, D., Ratcliffe, M. and Guccione, J. “In Vivo Myocardial Material Properties and Stress Distributions in Normal and Failing Human Hearts.” In Kerckhoffs, R. (Eds.), Patient-Specific Modeling of the Cardiovascular System. 2010; ISBN-13: 978-1441966902.
 							</li>
@@ -251,7 +251,7 @@
 						<p class="lead">
 							Software
 						</p>
-						<ol title="1" class="subsublead">
+						<ol title="1" class="sublead">
 							<li>
 								*MAT_HEART_TISSUE in LS-DYNA v971 R5.0 from Livermore Software Technology Corporation. LS-DYNA Keyword User’s Manual, Volume I, 2010. 
 							</li>
@@ -261,7 +261,7 @@
 						<p class="lead">
 							Conference Papers
 						</p>
-						<ol title="1" class="subsublead">
+						<ol title="1" class="sublead">
 							<li>
 								A. Babier, B. Zhang, R. Mahmood, V.G.L Alves, A. Barragan-Montero, J. Beaudry, C. Cardenas, Y. Chang, Z. Chen, J. Chun, H. Eraso, E. Faustmann, S. Gaj, S. Gay, M. Gronberg, J. He, G. Heilemann, S. Hira, Y. Huang, F. Ji, D. Jiang, J. Jimenez-Giraldo, H. Lee, J. Lian, K. Liu, S. Liu, K. Marixa, J. Marrugo, K. Miki, T. Netherton, D. Nguyen, H. Nourzadeh, A. Osman, Z. Peng, J. Quinto-Munoz, C. Ramsl, D. Rhee, J. Rodriguez-Arciniegas, H. Shan, J.V. Siebers, M. H. Soomro, <b><ins>K. Sun.</ins></b>, A. Usuga-Hoyos, C. Valderrama, R. Verbeek, E. Wang, S. Willems, Q. Wu, X. Xu, S. Yang, L. Yuan, S. Zhu, L. Zimmermann, K.L. Moore, T.G. Purdie, A.L. McNiven, T.C.Y. Chan, “An international validation of knowledge-based planning,” Medical Physics, Vol. 48, p. e422, 2021.
 							</li>
