--- a/news.html
+++ b/news.html
@@ -41,7 +41,7 @@
 				<li class="mb-4 mb-md-6 mb-lg-8">
 					<h2> Ranked 99<sup>th</sup> Percentile in Coursera's Data Science Coding Challenge: Load Default Prediction
 						<div class="who-when mt-1">
-							<time class="blog-index-time"> August 29, 2023 to August 31, 2023</time>
+							<time class="blog-index-time"> August 31, 2023</time>
 						</div>
 					</h2>
 					<p class="lead mt-4">
@@ -56,7 +56,7 @@
 					<p class="lead mt-4">
 						My ensemble, hyperparameter tuned machine learning model built using AutoGluon, Pandas, Numpy and scikit-learn ranked 99<sup>th</sup> percentile with AUC score of 76.13% while median score amongst the 2,064 particpants (as of December 1, 2023) was 52.85%.
 					</p>
-					
+					<br>
 					<img class="imgcenter" src="images/coursera_loan_default_rank.png" alt="coursera_loan_default_rank">
 
 
