--- a/news.html
+++ b/news.html
@@ -45,7 +45,7 @@
 						</div>
 					</h2>
 					<p class="lead mt-4">
-						Participated in Coursera's Data Science Coding Challenge to build a machine learning model to predict which individuals are at the highest risk of defaulting on their loan payments based on historical data of previous loans and their default rates.
+						Participated in <a href="https://www.coursera.org/projects/data-science-coding-challenge-loan-default-prediction" target="_blank">Coursera's Data Science Coding Challenge</a> to build a machine learning model to predict which individuals are at the highest risk of defaulting on their loan payments based on historical data of previous loans and their default rates.
 						Typical data obtained during loan applications are provided, including age, income, loan amount, credit score, interest rate, loan term, employment type, co-signer, etc.
 						The competition was held from August 29 to 31, 2023.
 					</p>
@@ -54,15 +54,10 @@
 						The predicted default outcomes for the test dataset was compared to the known ground truth hidden to the participants and automatically graded based on AUC metric when the predictions were uploaded to Coursera's servers.
 					</p>
 					<p class="lead mt-4">
-						My ensemble, hyperparameter tuned machine learning model built using AutoGluon, Pandas, Numpy and scikit-learn ranked 99<sup>th</sup> percentile with AUC score of 76.13% while median score amongst the 2,064 particpants (as of December 1, 2023) was 52.85%.
+						<a href="https://github.com/kaysunphd/coursera/blob/main/Data_Science_Coding_Challenge/Loan_Prediction/LoanDefaultPrediction.ipynb" target="_blank">My ensemble, hyperparameter tuned machine learning model</a> built using AutoGluon, Pandas, Numpy and scikit-learn ranked 99<sup>th</sup> percentile with AUC score of 76.13% while median score amongst the 2,064 particpants (as of December 1, 2023) was 52.85%.
 					</p>
 					<br>
 					<img class="imgcenter" src="images/coursera_loan_default_rank.png" alt="coursera_loan_default_rank">
-
-
-					<p class="lead mt-4">
-						<a href="https://www.coursera.org/projects/data-science-coding-challenge-loan-default-prediction" target="_blank"> Coursera's Data Science Coding Challenge: Loan Default Prediction</a>
-					</p>
 				</li>
 			</ul>	
 		</div>
