fix image alignment

--- a/news.html
+++ b/news.html
@@ -57,7 +57,7 @@
 						<a href="https://github.com/kaysunphd/coursera/blob/main/Data_Science_Coding_Challenge/Loan_Prediction/LoanDefaultPrediction.ipynb" target="_blank">My ensemble, hyperparameter tuned machine learning model</a> built using AutoGluon, Pandas, Numpy and scikit-learn ranked 99<sup>th</sup> percentile with AUC score of 76.13% while median score amongst the 2,064 particpants (as of December 1, 2023) was 52.85%.
 					</p>
 					<br>
-					<img class="imgcenter" src="images/coursera_loan_default_rank.png" alt="coursera_loan_default_rank">
+					<img class="img-illu" src="images/coursera_loan_default_rank.png" alt="coursera_loan_default_rank">
 				</li>
 			</ul>	
 		</div>
