--- a/mlops.html
+++ b/mlops.html
@@ -63,7 +63,7 @@
 				</p>
 
 				<br>
-				<img class="home-illu" src="images/ML_process.png" alt="ML_process">
+				<img class="home-illu" src="images/ML_process.jpg" alt="ML_process">
 				<p class="labelthin text-center"> Only a slim majority of AI projects progress into production mostly due to lack of tools to create standardize and repeatable processes for scalable ML operationalization
 				</p>
 			</div>
@@ -84,15 +84,20 @@
 						<li>Feature stores from AWS and even cloud databases to store offline and online features, model registries from AWS and Azure, along with the models metadata like all the algorithms, hyperparameters, and such.</li>
 						<li>Workflow orchestrated and automated with Apache Airflow, and Pipelines.</li>
 					</ul>
-				</p>	
-				<p class="lead">
-					Despite the availability of many solutions, there is still the need to know how to configure and connect these components.
 				</p>
-				<br>
-				<img class="home-illu" src="images/component_MLOps.png" alt="component_MLOps">
+				<img class="home-illu" src="images/component_MLOps.jpg" alt="component_MLOps">
 				<p class="labelthin text-center"> Component of MLOps </p>
 				<br>
 
+				<p class="lead">
+					Despite the availability of many solutions, there is still the need for the know-hows to configure and connect these components with different roles needed to perform the different functions.
+					Data engineers are needed to connect the data pipelines, data scientists to develop the models, software engineers to integrate with the application, devOps for all the automation and workflow, backend/cloud engineers for the cloud infrastructure and MLOps engineers for the ML system as well as data and model management.
+				</p>
+				<br>
+				<img class="home-illu-double" src="images/roles_in_MLOps.jpg" alt="roles_MLOps">
+				<p class="labelthin text-center"> Overlapping roles and functionalities in MLOps </p>
+				<br>
+				
 				<p class="lead">
 					Building with these components results in end-to-end MLOps.
 					<ol type="1" class="lead">
@@ -113,7 +118,7 @@
 				</p>
 				<br>
 
-				<img class="home-illu" src="images/end_to_end_MLOps.png" alt="end_to_end_MLOps">
+				<img class="home-illu" src="images/end_to_end_MLOps.jpg" alt="end_to_end_MLOps">
 				<p class="labelthin text-center"> End-to-end MLOps </p>
 			</div>
 
