--- a/mlops.html
+++ b/mlops.html
@@ -94,7 +94,7 @@
 					Data engineers are needed to connect the data pipelines, data scientists to develop the models, software engineers to integrate with the application, devOps for all the automation and workflow, backend/cloud engineers for the cloud infrastructure and MLOps engineers for the ML system as well as data and model management.
 				</p>
 				<br>
-				<img class="home-illu-double" src="images/roles_in_MLOps.jpg" alt="roles_MLOps">
+				<img class="home-illu" src="images/roles_in_MLOps.jpg" alt="roles_MLOps">
 				<p class="labelthin text-center"> Overlapping roles and functionalities in MLOps </p>
 				<br>
 				
