add roles in png

--- a/mlops.html
+++ b/mlops.html
@@ -85,7 +85,7 @@
 						<li>Workflow orchestrated and automated with Apache Airflow, and Pipelines.</li>
 					</ul>
 				</p>
-				<img class="home-illu" src="images/component_MLOps.jpg" alt="component_MLOps">
+				<img class="home-illu" src="images/component_MLOps.png" alt="component_MLOps">
 				<p class="labelthin text-center"> Component of MLOps </p>
 				<br>
 
@@ -94,7 +94,7 @@
 					Data engineers are needed to connect the data pipelines, data scientists to develop the models, software engineers to integrate with the application, devOps for all the automation and workflow, backend/cloud engineers for the cloud infrastructure and MLOps engineers for the ML system as well as data and model management.
 				</p>
 				<br>
-				<img class="home-illu" src="images/roles_in_MLOps.jpg" alt="roles_MLOps">
+				<img class="home-illu-double" src="images/roles_in_MLOps.png" alt="roles_MLOps">
 				<p class="labelthin text-center"> Overlapping roles and functionalities in MLOps </p>
 				<br>
 				
@@ -118,7 +118,7 @@
 				</p>
 				<br>
 
-				<img class="home-illu" src="images/end_to_end_MLOps.jpg" alt="end_to_end_MLOps">
+				<img class="home-illu" src="images/end_to_end_MLOps.png" alt="end_to_end_MLOps">
 				<p class="labelthin text-center"> End-to-end MLOps </p>
 			</div>
 
