link operational status to iot

--- a/iot.html
+++ b/iot.html
@@ -72,6 +72,11 @@
 					</p>
 					<br>
 					<p class="lead">
+						As an example, a <a href="operations_status.html" target="_blank"> dashboard</a> populated with made-up IoT data serves to demonstrate the real-time status monitoring of over 500 medical devices installed in hospitals around the United States. 
+						The real-time information aids in ensuring that each deployed device is operating optimally, reliability and remote support provided when needed.
+					</p>
+					<br>
+					<p class="lead">
 						Furthermore, role-based acess control and dynamic masking can be implemented to ensure patient privacy and comply with privacy laws.
 					</p>
 					<br>	
