--- a/whoweare.html
+++ b/whoweare.html
@@ -89,8 +89,8 @@
 						<ol title="1" class="lead">
 							<li>Created and deployed an embedded ensemble deep learning computer vision model to segment nerves in ultrasound images to aid clinicians in US-guided regional anesthesia.</li>
 							<li>Created deep learning computer vision models (CNN) to predict 3D dose distribution to speed up radiation therapy planning by 67% on average.</li>
-							<li>Created and deployed on-premise deep learning computer vision models (3D U-Net) to segment brain tumors in MR images and liver organs in CT images for radiomics.</li>
-							<li>Created and deployed on-premise deep learning computer vision model (CNN) to classify MR images into body regions for subsequent anatomy-specific analysis.</li>
+							<li>Created and deployed on-premise deep learning computer vision models (3D U-Net) to segment brain tumors in MR images (86% Dice) and liver organs in CT images for radiomics (96% Dice).</li>
+							<li>Created and deployed on-premise deep learning computer vision model (CNN) to classify MR images into body regions for subsequent anatomy-specific analysis (99% accuracy).</li>
 						</ol>
 						<br>
 
@@ -101,6 +101,31 @@
 							<li>Devised and led agile teams to build IoT solution and digital cloud platform to connect a neuroablation medical device for remote real-time monitoring of device performance and data collection.</li>
 							<li>Devised and led a clinical study to assess performance of IoT gateway solution at multiple pilot sites. Over 100 patients with 100% data accuracy, 97% data completeness.</li>
 							<li>Designed data models, developed ETL processes, and built data warehouses and web dashboards for insights in decision making support.</li>
+						</ol>
+					</div>
+
+					<div class="row mt-6">
+						<h1 class="text-left">Grants and Contracts</h1>
+					</div>
+
+					<div class="row">
+						<ol title="1" class="lead">
+							<li>U.S. Department of Defense (DoD), Chemical and Biological Defense</li>
+							Protective Mask Sizing App 
+							<br>
+							<a href="https://www.sbir.gov/node/1244297" target="_blank"> DoD SBIR 2016.1 CBD16-005 Phase I, </a>
+							<a href="https://www.sbir.gov/node/1609089" target="_blank"> Option, Phase II</a>
+							<br>
+							<li>U.S. Department of Defense (DoD), Department of the Army</li>
+							Burn Injury Assessment Tool with Morphable 3D Human Body Models 
+							<br>
+							<a href="https://www.sbir.gov/node/872895" target="_blank"> DoD SBIR 2015.1 A15-055 Phase I, </a>
+							<a href="https://www.sbir.gov/node/1485493" target="_blank"> Option, Phase II</a>
+							<br>
+							<li>Food and Drug Administration (FDA)</li>
+							An integrated multiscale multiphysics modeling and simulation of ocular drug delivery with whole-body pharmacokinetic response
+							<br>
+							<a href="https://grantome.com/grant/NIH/U01-FD005219-01" target="_blank"> 1U01FD005219 (2014 – 2017)</a>
 						</ol>
 					</div>
 
