--- a/whoweare.html
+++ b/whoweare.html
@@ -102,6 +102,14 @@
 							<li>Devised and led a clinical study to assess performance of IoT gateway solution at multiple pilot sites. Over 100 patients with 100% data accuracy, 97% data completeness.</li>
 							<li>Designed data models, developed ETL processes, and built data warehouses and web dashboards for insights in decision making support.</li>
 						</ol>
+						<br>
+
+						<p class="lead">
+							Business Intelligence
+						</p>
+						<ol title="1" class="lead">
+							<li>Devised and leading team to perform data mining, predictive modeling, optimization, forecasting and visualization from IoT data to provide insights, recommendations and predictions for business operations and decision-making.</li>
+						</ol>
 					</div>
 
 					<div class="row mt-6">
