add images to sandboxes

--- a/index.html
+++ b/index.html
@@ -104,12 +104,12 @@
 			<div class="row text-center sandbox-shade">
 				<div class="col-xs-12 col-sm-6 sandbox-shade">
 					<a class="no-underline-hover" href="sandbox/sandbox.html" target="_blank">
-						<img class="home-illu mt-4 mb-4" src="images/sandbox2.png" alt="sandbox_link">
+						<img class="home-illu" src="images/3d-human.png" alt="sandbox_link">
 					</a>
 				</div>
 				<div class="col-xs-12 col-sm-6 operations-shade">
 					<a class="no-underline-hover" href="operations_status.html" target="_blank">
-						<img class="home-illu mt-4 mb-4" src="images/sandbox2.png" alt="operations_link">
+						<img class="home-illu" src="images/BI-dashboard.png" alt="operations_link">
 					</a>
 				</div>
 			</div>
