add data platform

--- a/index.html
+++ b/index.html
@@ -100,6 +100,11 @@
 						<img class="home-illu" src="images/mlops_link_transparent.png" alt="mlops_link">
 					</a>
 				</div>
+				<div class="col-xs-12 col-sm-4 data_platform-shade">
+					<a class="no-underline-hover" href="data_platform.html">
+						<img class="home-illu" src="images/data_platform_link_transparent.png" alt="data_platform_link">
+					</a>
+				</div>
 			</div>
 			<div class="row text-center sandbox-shade">
 				<div class="col-xs-12 col-sm-6 sandbox-shade">
