remove transparency in images

--- a/data_platform.html
+++ b/data_platform.html
@@ -59,7 +59,7 @@
 					</p>
 					<br>
 				</div>
-				<img class="home-illu" src="images/functionalities_benefits_data_platform.png" alt="functionalities_benefits_data_platform>
+				<img class="home-illu" src="images/functionalities_benefits_data_platform.jpg" alt="functionalities_benefits_data_platform>
 				<p class="labelthin text-center"> Digital platform to connect internet of things (IoT) medtech devices with backend to ingest, store and process data as well as user frontends for visualizations and access </p>
 			</div>
 			<div class="row mt-6">
@@ -76,7 +76,7 @@
 					</p>
 					<br>
 				</div>			
-				<img class="home-illu" src="images/data_platform_oltp_olap.png" alt="oltp_olap">
+				<img class="home-illu" src="images/data_platform_oltp_olap.jpg" alt="oltp_olap">
 				<p class="labelthin text-center"> Data platform architecture to ingest, store, prepare and serve data </p>
 				<br>
 				<div class="col-xs-12 col-sm-3">
@@ -91,7 +91,7 @@
 					</p>
 					<br>	
 				</div>
-				<img class="home-illu" src="images/unified_digital_platform.png" alt="unified_digital_platform">
+				<img class="home-illu" src="images/unified_digital_platform.jpg" alt="unified_digital_platform">
 				<p class="labelthin text-center"> Unified digital platform solution for multiple IoT medical devices </p>	
 			</div>
 		</div>
