add data privacy compliance

--- a/deidentify.html
+++ b/deidentify.html
@@ -45,7 +45,7 @@
 					</p>
 					<br>
 					<p class="lead">
-						Learn more about GDPR and HIPAA <a href="https://tugboatlogic.com/blog/hipaa-vs-gdpr-compliance-whats-the-difference/" target=_blank>here </a>
+						Learn more about GDPR and HIPAA <a href="https://itirra.com/blog/the-main-differences-between-gdpr-and-hipaa/" target=_blank>here </a>
 					</p>
 					<br>
 					<p class="lead">
