--- a/index.html
+++ b/index.html
@@ -105,6 +105,11 @@
 						<img class="home-illu" src="images/data_platform_link_transparent.png" alt="data_platform_link">
 					</a>
 				</div>
+				<div class="col-xs-12 col-sm-4 compliance-shade">
+					<a class="no-underline-hover" href="compliance.html">
+						<img class="home-illu" src="images/compliance_link_transparent.png" alt="compliance_link">
+					</a>
+				</div>
 			</div>
 			<div class="row text-center sandbox-shade">
 				<div class="col-xs-12 col-sm-6 sandbox-shade">
